# analisador-de-telemetria

./: .gitignore  CMakeLists.txt  CMakePresets.json  report.json
.github/workflows/: ci.yml
data/: relatorio.txt  relatorio_customizado.txt
include/: csv_parser.hpp  downsampler.hpp  exprtk.hpp  iparser.hpp  lap_session.hpp  mainwindow.hpp  math_channel_evaluator.hpp  memory_mapped_file.hpp  session_manager.hpp  telemetry_analyzer.hpp  telemetry_data.hpp  telemetry_parser.hpp  telemetry_plot_widget.hpp  telemetry_record.hpp
src/: csv_parser.cpp  gui_main.cpp  lap_session.cpp  main.cpp  mainwindow.cpp  math_channel_evaluator.cpp  memory_mapped_file.cpp  memory_mapped_file.hpp  session_manager.cpp  telemetry_analyzer.cpp  telemetry_parser.cpp  telemetry_plot_widget.cpp
tests/: test_downsampler.cpp  test_math_channels.cpp  test_telemetry.cpp
tools/: generate_data.cpp
